--- a/css/style-sushiModal.css
+++ b/css/style-sushiModal.css
@@ -1,7 +1,8 @@
 
 /* Modal header */
 .modal-card-head{
-  background: #323232;
+  background: #4f4f4f;
+  height: 10%;
 }
 
 /* Modal title */
@@ -35,7 +36,8 @@
 
 /* footer */
 .modal-card-foot{
- background: #323232;
+ background: #4f4f4f;
+ height: 10%;
 }
 
 /* Text over inputs */
@@ -65,10 +67,6 @@
   font-weight: bolder;
   text-align: center;
   border: 0.1px;
-  left: 50%;
-  display: flex;
-  justify-content: center;
-  margin: auto;
 }
 
 /* Media queries */
@@ -77,9 +75,15 @@
   .delete{
     display: block;
   }
-  
+
   .field{
     width: 100%;
+    margin: 0;
+  }
+
+  .modal-card-head{
+    background: #4f4f4f;
+    height: 4%;
   }
 
   .modal-card-body img{
@@ -88,6 +92,13 @@
     opacity: 0.1;
   }
   .button-modal{
-    width: 90%;
+    width: 100%;
+    height: 30px;
+    padding:0;
+  }
+
+  .modal-card-foot{
+   background: #4f4f4f;
+   height: 7%;
   }
 }
