--- a/css/style-sushi.css
+++ b/css/style-sushi.css
@@ -94,7 +94,7 @@ body {
   font-size: 4vw;
   margin: auto;
   margin-bottom: 1em;
-  color: #b48e53;
+  color: #a0a09f;
   width: 50%;
   line-height: 1.2;
   font-weight:600;
